--- a/css/main.css
+++ b/css/main.css
@@ -10,20 +10,42 @@ header {
 h1 {
     font-size: 36px;
 }
+h2 {
+    margin-bottom:-2px;
+}
 code {
     padding: .2em .4em;
-	margin: 0;
+    margin: 0;
     font-size: 85%;
     white-space: break-spaces;
-	border-radius: 6px;
+    border-radius: 6px;
     background-color: #343941;
+}
+pre {
+    padding: 16px;
+    background-color: #161b22;
+    border-radius: 6px;
+    border: 1px solid #30363d;
 }
 a {
     color: #e6edf3;
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 5px;
+}
+img {
+    width: 100%;
+    height: auto;
+}
+.listing {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    text-align: center; 
+    line-height: 1.6;
 }
 .post {
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     margin-bottom: 20px;
@@ -39,3 +61,7 @@ a {
 .date {
     font-size: 16px;
 }
+.no-underline {
+    text-decoration: none;
+}
+
